<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingStart="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appname"
        android:id="@+id/textView2"
        android:layout_weight="0.06"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar"
        android:id="@+id/boton1"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_preferencias"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acion_acerca"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.06" />

</LinearLayout>
